fixing logo problem on mobile (again)

--- a/SCSS/header.scss
+++ b/SCSS/header.scss
@@ -63,10 +63,11 @@ header {
 		align-items: center;
 
 		.button_links {
-			visibility: collapse;
+			visibility: hidden;
 		}
 
 		.logo {
+			margin-top: 23px;
 			align-self: center;
 			max-width: 7rem;
 		}
